--- a/.github/workflows/dockerfiles.yml
+++ b/.github/workflows/dockerfiles.yml
@@ -23,7 +23,8 @@ jobs:
       matrix:
         dockerfile:
           [
-            "./Dockerfile",
+            "./build/docker/go-tools/Dockerfile",
+            "./build/docker/cthulhu-mythos-tools/Dockerfile",
           ]
     runs-on: "ubuntu-22.04"
     name: Lint ${{ matrix.dockerfile }}
@@ -41,8 +42,17 @@ jobs:
           error_level: 2
 
   build-targets:
+    strategy:
+      fail-fast: false
+      max-parallel: 4
+      matrix:
+        target:
+          [
+            "go-tools",
+            "cthulhu-mythos-tools",
+          ]
     runs-on: "ubuntu-22.04"
-    name: Build docker image
+    name: Build ${{ matrix.target }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -59,5 +69,5 @@ jobs:
 
       - name: Build
         run: |
-          make docker-build
+          make build-${{ matrix.target }}
     
